# rocket_practice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  client-queues.md  cookies-notes.md  diesel-notes.md  nginx.conf  rust-challenges.md
.github/: dependabot.yml
FE/: .eslintrc.json  index.html  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
FE/src/: App.js  index.js  store.js  theme.js
FE/src/Components/: Pages.js
FE/src/Components/ChatListing/: index.js
FE/src/Components/ChatListing/components/: ChatListing.js
FE/src/Components/Home/: Home.js
FE/src/Components/SignUp/: SignUp.js  index.js
FE/src/Components/SignUp/apis/: index.js
FE/src/Components/SignUpSignIn/apis/: index.js
FE/src/Components/SignUpSignIn/components/: SignUpSignIn.js
FE/src/Components/SignUpSignIn/constants/: index.js
FE/src/actionCreators/: user.js
FE/src/apis/: profile.js  rooms.js
FE/src/reducers/: user.js
FE/src/utils/: inputValidations.js
FE/src/utils/networkUtilities/: FetchWrapper.js  index.js
migrations/2020-04-19-184140_create_users/: down.sql  up.sql
migrations/2020-04-20-100044_create_rooms/: down.sql  up.sql
migrations/2020-04-22-214455_create_room_subscribers/: down.sql  up.sql
migrations/2020-04-23-164739_create_message/: down.sql  up.sql
migrations/2020-05-03-143757_create_queues/: down.sql  up.sql
public/: main.js
src/: constants.rs  error_catchers.rs  main.rs  schema.rs  view_models.rs
src/business/: message.rs  mod.rs  room.rs  user.rs
src/dal/: message.rs  mod.rs  queue.rs  room.rs  room_subscribers.rs  user.rs
src/dtos/: mod.rs  responders.rs
src/dtos/request_guards/: ApiKey.rs  mod.rs
src/models/: mod.rs  user.rs
src/routes/: home.rs  message.rs  mod.rs  profile.rs  room.rs  user.rs
src/states/: mod.rs  runtime.rs
src/utils/: cookies.rs  mod.rs
static/: index.htm
views/: index.hbs
