[package]
name = "rocket_practice"
version = "0.1.0"
authors = ["kumarmo2 <kr.mohit6794@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
lapin = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["mysql"] }
base64 = "0.12.3"
uuid = {version = "0.8.1", features = ["v4"]}
smol = "0.1.5"
chat_common_types = {git = "https://github.com/kumarmo2/chat_common_types.git", branch = "master"}
manager = { git = "https://github.com/kumarmo2/rabbitmq_manager.git", branch = "master"}
validator = "0.10.1"
bcrypt = "0.8.1"
jsonwebtoken = "5.0.1"
time = "0.2.16"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve", "json", "diesel_mysql_pool", "handlebars_templates"]